app/jslib/jqtouch/themes/apple/theme.css
/* ... */
#jqt ul.smallgrid li .icon38 .mask {
    width: 38px;
    height: 38px;
}

#jqt ul.grid li .icon,
#jqt ul.smallgrid li .icon,
#jqt ul.plastic li .icon,
#jqt ul.detail li .icon {
    -webkit-background-size: contain; -moz-background-size: contain; background-size: contain;
    background-position: 50% 50%;
    -webkit-background-origin: content-box; -moz-background-origin: content-box; background-origin: content-box;
    background-color: white;
    -webkit-border-radius: 8px; -moz-border-radius: 8px; border-radius: 8px;
    -webkit-box-shadow: rgba(0,0,0,0.5) 2pt 2pt 4pt; -moz-box-shadow: rgba(0,0,0,0.5) 2pt 2pt 4pt; box-shadow: rgba(0,0,0,0.5) 2pt 2pt 4pt;
}

#jqt ul.grid li .icon,
#jqt ul.smallgrid li .icon {
    display: block;
    width: 57px;
    height: 57px;
}

#jqt ul.grid li.active .icon,
#jqt ul.smallgrid li.active .icon {
    -webkit-box-shadow: rgba(0,0,0,0.5) 1pt 1pt 4pt; -moz-box-shadow: rgba(0,0,0,0.5) 1pt 1pt 4pt; box-shadow: rgba(0,0,0,0.5) 1pt 1pt 4pt;
}

#jqt ul.grid li .icon:active,
#jqt ul.smallgrid li .icon:active {
    background-color: #606070;
}

/* @end */



/* @group */

#jqt ul {
    font: normal 13pt Helvetica;
    font-color: #385487;
    color: #385487;
    font-size: 17px;
    -webkit-padding-start: 0px;
    /* moz specific */
    display: -moz-box;
    -moz-box-orient: vertical;
    -moz-box-sizing: border-box;
}

#jqt ul.row {
    position: absolute;
    -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box;
    z-index: 99;
    height: 78px;
    width: 100%;
    border-top: 1px solid #666;
    border-bottom: 1px solid #666;
    padding: 0 10px;
    margin: auto;
    text-align: right;
    font-size: 7pt;
    background-color: rgba(255, 255, 255, 0.5);
    -webkit-box-shadow: 0 0 16px #BBB;
    -webkit-transition-property: opacity;
    -webkit-transition-duration: 500ms;
    -webkit-transition-timing-function: linear;
    opacity: 1;
    overflow: hidden;
}

#jqt ul.row.t-hide {
    opacity: 0;
    -webkit-transition-property: opacity;
    -webkit-transition-duration: 175ms;
    -webkit-transition-timing-function: linear;
}

#jqt ul.row li {
    display: inline-block;
    font: 7pt;
    line-height: 8pt;
    width: 60px;
    border: 0px transparent;
    background: transparent;
    padding: 3px 12px 3px 12px;
    margin: 0;
    font-size: 8pt;
    background-repeat: no-repeat;
    color: #fff;
    text-align: center;
    text-shadow: 1pt 1pt 1.5pt #000;
}

/* @end */



/* @group Button */

#jqt .pushbutton, #jqt .whiteButton, #jqt .grayButton,
#jqt .redButton, #jqt .blueButton, #jqt .greenButton {
    display: block;
    border-width: 0 12px;
    margin: 10px 10px;
    padding: 10px;
    text-align: center;
    font-size: 20px;
    font-weight: bold;
    text-decoration: inherit;
    color: inherit;
}

#jqt .whiteButton, #jqt .pushbutton.white {
    -webkit-border-image: url(img/whiteButton.png) 0 12 0 12; -moz-border-image: url(img/whiteButton.png) 0 12 0 12; border-image: url(img/whiteButton.png) 0 12 0 12;
    text-shadow: rgba(255, 255, 255, 0.7) 0 1px 0;
}

#jqt .grayButton, #jqt .pushbutton.gray {
    -webkit-border-image: url(img/grayButton.png) 0 12 0 12; -moz-border-image: url(img/grayButton.png) 0 12 0 12; border-image: url(img/grayButton.png) 0 12 0 12;
    color: #FFFFFF;
}

#jqt .redButton, #jqt .pushbutton.red {
    -webkit-border-image: url(img/redButton.png) 0 12 0 12; -moz-border-image: url(img/redButton.png) 0 12 0 12; border-image: url(img/redButton.png) 0 12 0 12;
    color: #FFFFFF;
}

#jqt .greenButton, #jqt .pushbutton.green {
    -webkit-border-image: url(img/greenButton.png) 0 12 0 12; -moz-border-image: url(img/redButton.png) 0 12 0 12; border-image: url(img/greenButton.png) 0 12 0 12;
    color: #FFFFFF;
}

#jqt .pushbutton:active, #jqt .pushbutton.active,
#jqt .whiteButton:active, #jqt .grayButton:active, #jqt .redButton:active, #jqt .blueButton:active, #jqt .greenButton:active,
#jqt .whiteButton:active, #jqt .grayButton:active, #jqt .redButton:active, #jqt .blueButton:active, #jqt .greenButton:active {
    -webkit-border-image: url(img/activeButton.png) 0 12 0 12; -moz-border-image: url(img/redButton.png) 0 12 0 12; border-image: url(img/activeButton.png) 0 12 0 12;
}

/* @end */



/* @group Lists */

#jqt h1 + ul, #jqt h2 + ul, #jqt h3 + ul, #jqt h4 + ul, #jqt h5 + ul, #jqt h6 + ul {
    margin-top: 0;
}

#jqt ul, #jqt fieldset.rounded {
    color: black;
    font-weight: bold;
    font-size: 13pt;
    line-height: 21pt;
    padding: 0;
    margin: 15px 10px 17px 10px;
    list-style-type: none;
}

#jqt ul.rounded, #jqt fieldset.rounded {
    background-color: #fff;
    -webkit-border-radius: 8px; -moz-border-radius: 8px; border-radius: 8px;
    -webkit-box-shadow: #999 0px 0px 2px;
}

#jqt fieldset.rounded ul.rounded {
    margin: -15px -10px -17px -10px;
}

#jqt fieldset.rounded > *, #jqt fieldset.rounded > * > a:only-of-type {
    border-style: none;
    border-width: 0;
    -webkit-border-radius: 0; -moz-border-radius: 0; border-radius: 0;
}

#jqt fieldset.rounded {
    border: none;
}

#jqt fieldset.rounded input[type="radio"] {
    display: -webkit-box; display: -moz-box; display: box;
    -webkit-appearance: none; -moz-appearance: none;
    -webkit-box-pack: justify;
    -webkit-box-align: center;
    -webkit-box-orient: horizontal; -moz-box-orient: horizontal; box-orient: horizontal;
    width: 100%;
    line-height: 28px;
    font-size: 28px;
    font-weight: bold;
    color: inherit;
}

#jqt fieldset.rounded > input[type="radio"] {
    min-height: 44px;
    background-color: white;
    color: black;
}
/* ... */

